# sentinelflow

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
scripts/: init_kafka_topics.sh  init_neo4j_schema.cypher  test_graph_engine.py
src/sentinelflow/: __init__.py
src/sentinelflow/config/: __init__.py  settings.py
src/sentinelflow/dashboard/: __init__.py  app.py
src/sentinelflow/database/: __init__.py
src/sentinelflow/detectors/: __init__.py
src/sentinelflow/generator/: __init__.py  cli.py  main.py  models.py  patterns.py
src/sentinelflow/ingestor/: __init__.py
src/sentinelflow/processor/: __init__.py  detector.py  graph_engine.py  redis_geo.py
