[project]
name = "sentinelflow"
version = "1.0.0"
description = "Enterprise-Grade Real-Time Financial Fraud Detection System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Teknofest Team", email = "team@sentinelflow.dev"}
]
keywords = [
    "fraud-detection",
    "kafka",
    "neo4j",
    "redis",
    "real-time",
    "machine-learning",
    "graph-analytics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    # =============================================================================
    # Core Dependencies
    # =============================================================================
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "rich>=13.7.0",
    
    # =============================================================================
    # Kafka - Message Streaming
    # =============================================================================
    "confluent-kafka>=2.3.0",
    "aiokafka>=0.10.0",
    
    # =============================================================================
    # Neo4j - Graph Database
    # =============================================================================
    "neo4j>=5.15.0",
    
    # =============================================================================
    # Redis - Cache & Geo Operations
    # =============================================================================
    "redis>=5.0.0",
    "hiredis>=2.3.0",
    
    # =============================================================================
    # Data Processing & Analysis
    # =============================================================================
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "faker>=22.0.0",
    
    # =============================================================================
    # Web Framework & API
    # =============================================================================
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    
    # =============================================================================
    # Dashboard & Visualization
    # =============================================================================
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "pyvis>=0.3.2",
    "networkx>=3.2.0",
    
    # =============================================================================
    # NLP & Text Processing
    # =============================================================================
    "spacy>=3.7.0",
    
    # =============================================================================
    # Async & Concurrency
    # =============================================================================
    "asyncio-throttle>=1.0.2",
    "aiofiles>=23.2.1",
    
    # =============================================================================
    # Geospatial
    # =============================================================================
    "geopy>=2.4.1",
    "haversine>=2.8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ipython>=8.20.0",
]

ml = [
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.3",
]

[project.scripts]
sentinelflow-generate = "sentinelflow.generator.cli:main"
sentinelflow-detect = "sentinelflow.detectors.cli:main"
sentinelflow-dashboard = "sentinelflow.dashboard.app:main"

[project.urls]
Homepage = "https://github.com/teknofest/sentinelflow"
Documentation = "https://sentinelflow.readthedocs.io"
Repository = "https://github.com/teknofest/sentinelflow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinelflow"]

# =============================================================================
# Tool Configurations
# =============================================================================

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = ["E501", "B008", "C901"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
